Another attempt to fix homepage spacing. Having cache issue.

--- a/gig_calendar/static/gig_calendar/style.css
+++ b/gig_calendar/static/gig_calendar/style.css
@@ -61,7 +61,7 @@ h1, h2, h3, h4 {
 .homepage-gig {
     position: relative;
     width: 100%;
-    height: 25%;
+    height: 24%;
 }
 
 .gig-calendar h1 {
